--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-preset-react": "^6.23.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "css-loader": "^0.26.1",
-    "express": "^4.14.0",
     "external-svg-sprite-loader": "^1.0.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -63,7 +62,8 @@
     "classnames": "^2.2.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "yargs": "^6.5.0"
+    "yargs": "^6.5.0",
+    "express": "^4.14.0"
   },
   "keywords": [
     "C"
