--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^9.10.0",
-    "path": "^0.12.7",
-    "planify": "^1.5.0",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.4.2",
@@ -63,7 +61,9 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "yargs": "^6.5.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "path": "^0.12.7",
+    "planify": "^1.5.0"
   },
   "keywords": [
     "C"
