--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-preset-react": "^6.23.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "css-loader": "^0.26.1",
-    "external-svg-sprite-loader": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^9.10.0",
     "react-addons-test-utils": "^15.4.1",
@@ -63,7 +62,16 @@
     "webpack-dev-server": "^2.3.0",
     "webpack-hot-middleware": "^2.13.2",
     "webpack-validator": "^2.3.0",
-    "extract-text-webpack-plugin": "^1.0.1"
+    "extract-text-webpack-plugin": "^1.0.1",
+    "external-svg-sprite-loader": "^1.0.3", 
+    "postcss": "^5.2.10",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.1",
+    "postcss-ltr-rtl-detect": "^1.x.x",
+    "postcss-mixins": "^5.4.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-reporter": "^3.0.0"
   },
   "keywords": [
     "C"
