--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feedle",
-  "cssPrefix": "account-orders",
+  "cssPrefix": "feedle",
   "version": "1.0.0",
   "main": "./server/server.js",
   "scripts": {
