--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/axios": "^0.14.0",
     "@types/classnames": "0.0.32",
     "@types/express": "^4.0.35",
+    "@types/mongoose": "^4.7.13",
     "@types/node": "^7.0.21",
     "@types/react": "^15.0.10",
     "@types/react-dom": "^0.14.23",
@@ -50,20 +51,12 @@
     "axios": "^0.15.3",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "yargs": "^6.5.0",
     "express": "^4.14.0",
+    "external-svg-sprite-loader": "^1.0.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "mongoose": "^4.10.1",
     "path": "^0.12.7",
     "planify": "^1.5.0",
-    "webpack": "^1.13.3",
-    "webpack-assets-manifest": "^0.6.1",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.13.2",
-    "webpack-validator": "^2.3.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "external-svg-sprite-loader": "^1.0.3", 
     "postcss": "^5.2.10",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
@@ -71,7 +64,16 @@
     "postcss-ltr-rtl-detect": "^1.x.x",
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
-    "postcss-reporter": "^3.0.0"
+    "postcss-reporter": "^3.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "webpack": "^1.13.3",
+    "webpack-assets-manifest": "^0.6.1",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-validator": "^2.3.0",
+    "yargs": "^6.5.0"
   },
   "keywords": [
     "C"
